Hls/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp.clang-tidy.loop-label.out.log
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:1325:7: warning: Added loop label VITIS_LOOP_1223_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1223_1: 
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:1325:7: note: FIX-IT applied suggested code changes
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:2299:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:2299:5: note: FIX-IT applied suggested code changes
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:2313:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:2313:5: note: FIX-IT applied suggested code changes
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:2327:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:2327:5: note: FIX-IT applied suggested code changes
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:3944:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:3944:7: note: FIX-IT applied suggested code changes
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:5747:49: error: Invalid Directive: for current device, ram_s2p +  is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=z_buffer type=ram_s2p
                                                ^
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:5754:5: warning: Added loop label VITIS_LOOP_22_1:   [xilinx-label-all-loops]
    for(ap_uint<4> i = 0; i < 3; i++) {
    ^~~
    VITIS_LOOP_22_1: 
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:5754:5: note: FIX-IT applied suggested code changes
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:5756:2: warning: Added loop label VITIS_LOOP_24_2:   [xilinx-label-all-loops]
 for(ap_uint<4> j = 0; j < 3; j++) {
 ^~~
 VITIS_LOOP_24_2: 
/home/wu/__PYNQ__/hls_ok/render/render/hls/.autopilot/db/zbuffer.pp.0.cpp:5756:2: note: FIX-IT applied suggested code changes
